2012-11-28  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_groups.php,
	  include/functions_treeview.php,
	  include/functions_os.php,
	  include/functions_tags.php,
	  operation/tree.php: Small fixes to the treeview.

2012-11-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_treeview.php
	operation/tree.php: Fix some bugs of treeview

2012-11-27  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_treeview.php,
	  operation/tree.php: Added support for agent and module navigation
	  from the metaconsole.

2012-11-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/status_monitor.php: Added  title for metaconsole.

2012-11-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/reporting/reporting_viewer.php: Fix some bugs of
	reports on metaconsole

2012-11-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Fixed progress_bar in metaconsole.

2012-11-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Performance improvements
	in networkmaps

2012-11-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_delete_modules.php: Fixed a bug 
	on massive delete modules due of a copypaste

2012-11-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php
	include/functions_networkmap.php
	operation/agentes/status_monitor.php
	operation/netflow/nf_live_view.php: Improve the 
	performance of networkmap with the new status counts.
	Modify some common code between console and metaconsole

2012-11-26  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_groups.php,
	  include/functions_agents.php,
	  include/functions_treeview.php,
	  include/functions_os.php,
	  include/functions_tags.php,
	  operation/tree.php: Added metaconsole support to the tree view.

2012-11-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	operation/events/events_list.php
	operation/events/events.php